GNOME Bugzilla – Bug 792949
Zoom level does not show values in between
Last modified: 2018-02-02 19:08:26 UTC
Currently the zoom level buttons uses a fixed table of zoom levels. This leads to an empty text on zoom level button when using a zooming gesture iff the value is falling in-between the supported table range.
Created attachment 367511 [details] [review] Patch fixing zoom levels This patch simplifies the zooming code to rely on webkit only. Zoom in/out are set in 0.25 steps with a minimum and maximum border. It further more fixes missing zoom level text when using touch gestures.
Review of attachment 367511 [details] [review]: I was confused why you were able to remove most of these functions without breaking anything in EphyWebView... turns out it is ignoring EphyZoom entirely and just calling the WebKit functions directly to manage the zoom level.... ::: src/ephy-window.c @@ +1012,3 @@ double zoom; GtkWidget *zoom_level_button; + g_autofree gchar *zoom_level; I've been thinking it's about time to start using g_autoptr in Epiphany, but we haven't yet, and let's not start now with this patch. It's good if you change this.
Created attachment 367577 [details] [review] Patch fixing zoom levels - V2 Patch without g_autofree
*** Bug 772052 has been marked as a duplicate of this bug. ***