Zoom level does not show values in between

Currently the zoom level buttons uses a fixed table of zoom levels. This leads to an empty text on zoom level button when using a zooming gesture iff the value is falling in-between the supported table range.

This patch simplifies the zooming code to rely on webkit only. Zoom in/out are set in 0.25 steps with a minimum and maximum border. It further more fixes missing zoom level text when using touch gestures.

https://bugzilla.gnome.org/show_bug.cgi?id=792949